[project]
name = "wackyplot_willwng"
version = "0.0.1"
authors = [
  { name="willwng" },
]
description = "Plotting helper package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/willwng/wackyplot"
Issues = "https://github.com/willwng/wackyplot/issues"